# lofillon

./: .gitignore  README.md
.github/workflows/: readme.yml
Classification/Churn_RandomForest/: Dictionnaire_Des_Données_Final_Refined.docx
ImpactLens/: .gitignore  How_to_analyse_and_interpret.md  LICENSE  README.md  pyproject.toml
ImpactLens/.github/workflows/: ci.yml
ImpactLens/assets/goldset/: gold_facts.sample.jsonl
ImpactLens/src/impactlens/: api.py  validation.py
ImpactLens/src/impactlens/clients/: __init__.py
ImpactLens/src/impactlens/documents/: download.py  quality.py  selection.py  text_source.py
ImpactLens/src/impactlens/evaluation/: __init__.py
ImpactLens/src/impactlens/pipelines/: build_silver.py  ingest_documents.py  process_documents.py  select_documents.py
ImpactLens/src/impactlens/schemas/: __init__.py
ImpactLens/src/impactlens/ui/: __init__.py
ImpactLens/src/impactlens_assessment/: cli.py
ImpactLens/tests/: test_parsing.py
Pneumoniax 3000/: .gitignore  README.md  data_manager.py  dicom_importer.py  doctor_view.py  generate_test_data.py  model_interface.py  requirements.txt
RAG Emprez/Chromadb/: chromadb.py
SCRM-Resistance-distance/: .gitignore  run_ports_stress_suite.py  run_ports_tables.py  run_toys_tables.py  summarize_outputs_nodes.py
impactlens_app/: How_to_analyse_and_interpret.md  README.md
scrm_resistance_distance/: Analysis-metrics-resistance.py  README.md  paper.tex  references.bib  requirements.txt
sentimentanalysis_amazon/: .gitignore  README.md
xray_analysis_app/: app.py  preparator_view.py
(+579 files in other folders)
