[project]
name = "impactlens"
version = "0.1.0"
description = "ImpactLens: end-to-end robust, citation-grounded extraction and reporting for World Bank projects (structured + PDFs) using Ollama."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ImpactLens Contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=9.0",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "orjson>=3.10",
  "polars>=1.7",
  "pyarrow>=17.0",
  "pymupdf>=1.24",
  "pillow>=10.4",
  "numpy>=1.26",
  "easyocr>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
]
ui = [
  "streamlit>=1.33",
]

[project.scripts]
impactlens = "impactlens.cli:app"
impactlens-assess = "impactlens_assessment.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
